# TPSChemVIS

./: .gitignore  .gitmodules  README.md  pyproject.toml
asbuilder/: README.md  config.py  project.py
asbuilder/active_space/: localize_integrals.py
asbuilder/cluster/: state.py
asbuilder/gui/: app.py  main_window.py  workers.py
asbuilder/gui/screens/: active_space_screen.py  cmf_screen.py  export_screen.py  integrals_summary_screen.py  load_screen.py  molden_screen.py  new_calc_dialog.py  post_analysis_screen.py  setup_screen.py  viewer_screen.py
asbuilder/gui/widgets/: atom_table.py  cluster_manager.py  collapsible_section.py  log_pane.py  molden_viewer_panel.py  orbital_table.py  webview_panel.py
asbuilder/io/: chk_to_molden.py  run_scf.py
asbuilder/julia_bridge/: runner.py
asbuilder/julia_bridge/templates/: driver_cepa.jl.j2  driver_cmf.jl.j2  driver_fci_solve.jl.j2  driver_pt2.jl.j2  driver_spt.jl.j2  driver_tpsci.jl.j2  driver_tpsci_ct.jl.j2  driver_wavefunction_post_analysis.jl.j2  setup_pycall.jl.j2  submit.slurm.j2
asbuilder/viewers/: __init__.py  jmol.py
asbuilder/webview/: server.py
docs/: index.html
tests/: test_julia_threads.py  test_molden_generation.py  test_post_analysis_template.py
