[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "asbuilder"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6",
    "PyQt6-WebEngine>=6.6",
    "jinja2>=3.1",
    "numpy>=1.24",
    "pyscf>=2.4",
    "h5py>=3.9",
    "scipy>=1.11",
]

[project.scripts]
asbuilder = "asbuilder.gui.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["asbuilder*"]
